collapsable first issue fix

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -50,6 +50,14 @@ input {
   height: 240px;
   margin-top: 20px;
   margin-left: 55px;
+ 
+}
+.notcollapse {
+  width: 90%;
+  height: 40px;
+  margin-top: 20px;
+  margin-left: 55px;
+ 
 }
 
 .collapse-header {
